<resources>
    <string name="app_name">Gastos App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings\n</string>
    <string name="account">Account</string>
    <string name="shop_settin">Shop Setting</string>
    <string name="payment_set">Payment Settting</string>
    <string name="support">Support</string>
    <string name="promocode">do your have a promocode?</string>
    <string name="clickHear">click hear</string>
    <string name="log_out">Log out</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_addres">Shop Address</string>
    <string name="shop_catego">Shop Category</string>
    <string name="shop_locati">Shop Location </string>
    <string name="shop_locate_city">Select City</string>
    <string name="shop_inform">Shop Information</string>
    <string name="account_inf">Account Information</string>
    <string name="owner_name">Owner Name</string>
    <string name="phone_numbe">Phone Number</string>
    <string name="email_addre">Email Address</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="category_spinner_prompt">Select Shop Category</string>
    <string name="city_spinner_prompt">Select Shop Location</string>
    <string name="image">image</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="edt_hint_number">Enter your phone number</string>
    <string name="phone_num">Phone Number</string>
    <string name="EnterPin">Enter Your Pin</string>
    <string name="welcome_to_">Welcome To</string>
    <string name="welcome_to_1">Gastos</string>
    <string name="hint_text"><font size="14sp">Mobile Number</font></string>
    <string name="enter_no">Enter Mobile Number</string>
    <string name="todo">TODO</string>
    <string name="nine_one">+91</string>
    <string name="verify">Verify</string>
    <string name="sent_otp">We have sent an OTP on your </string>
    <string name="no_nine_one">Number +91</string>
    <string name="textview">Textview</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="elite_marke">Elite market </string>
    <string name="total_savin">Total saving </string>
    <string name="account_sta">Account status</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="terms_and_c">Terms and condition</string>
    <string name="logout">Logout</string>
    <string name="payment_ben">Payment benefits</string>
    <string name="discount_ma">Discount Margins</string>
    <string name="service_amo">service amount</string>
    <string name="account_pay">Account payment</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="coins_recei">Coins Received</string>
    <string name="what_is_ref">what is refer and earn program?</string>
    <string name="what_is_ref_ans">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\nxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="billed_amou">Billed Amount</string>
    <string name="included_mr">Included MRP\n(If any)</string>
    <string name="caf_bistro">Caf\u00C3\u00A9 Bistro</string>
    <string-array name="ques1">
        <item>sknswn nakjxn jjqnqk soqo ioqskq qnsoq qnsoq kjox o sssssssss sq qs      qs </item>

    </string-array>
    <string name="set_your_4_digit_pin">Set Login PIN</string>
    <string name="create_pin">Create your 4 Digit Login PIN</string>
    <string name="new_pin">Enter pin</string>
    <string name="renew_pin">Re-Enter pin</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="personal_details">Personal Details</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="have_a_reff">Have a Referral Code?</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="dob">dob</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="textview1">TextView</string>
    <string name="enter_code">Enter code</string>
    <string name="your_account_has_been">Your Account Has Been</string>
    <string name="verified_successfully">Verified Successfully!</string>
    <string name="forget_pin">Forget Pin?</string>
    <string name="start">Start</string>
    <string name="add_upi_qr">Add UPI QR</string>
    <string name="terms_policies">Terms &amp; Policies</string>
    <string name="enter_upi_id">Enter UPI ID</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="bill_paid_succss">Welcome to \n GASTOS PROVIDER CLUB</string>
    <string name="bill_payment_failed">Payment Failed</string>
    <string name="shop_locate_state">Select State</string>
    <string name="state_spinner_prompt">Select State</string>
    <string name="design_spinner_prompt">Select Type</string>
    <string name="gastos_nprovider">GASTOS\nPROVIDER</string>
    <string name="jump_to_Home">Jump to Home</string>
    <string name="all_Set">You Are All Set...</string>
    <string name="cafe_Bistro">Cafe Bistro</string>
    <string name="rate">Rating (562)</string>
    <string name="manageQr">Manage\nQR</string>
    <string name="posQr">POS\nQR</string>
    <string name="pWallet">Provider\nWallet</string>
    <string name="dhamaka">Double Dhamaka Offer!</string>
    <string name="user_agreement">User Agreement</string>
    <string name="conti">Continue</string>
    <string name="read_the_document_below_and_agree_to_the_terms_to_proceed">Read the document below and agree to the terms to proceed.</string>
    <string name="terms">Any user signing up on this will be considered as GASTOS PROVIDER and he/she agrees to offer a commission Percentage, given text field in shop profile, according to his/her own comfort of business so that we can use it as a discount on every billed amount of the GASTOS customer.\n\nWe hereby declare that the payment of the billed amount after discounting will be directly reflected in the PROVIDER’s account as of which we don’t keep any money in-between the transaction.\n\nThe received amount will be only X% less (X = value of percentage commission given by the provider) as of the bill created by the PROVIDER. The PROVIDER’s UPI address and payment receivable information will be asked and will not disclosed or shared to anyone or anywhere. The information which will be visible in our main application and before the users are mentioned below along with their purpose: • Images – All images posted by the provider will be shown in his profile page in the user application (their cover photo of the shop and other images related to their businesses) • Owner Name – At Shop profile page so that user can know about the Provider • Shop Address – At shop profile to help user to get clear idea about the shop address and can reach there • Shop Co-ordinates – At shop profile so that user can directly navigate to the shop location saved by the Provider • Commission Percentage – At shop profile in user app as well as in other pages inside user application so that user can see how much discount the shop is giving, as we are not keeping money in between the transaction so the entered Commission value will be depending on their business and how much they want to offer and grow. • Contact Number – At shop profile page in GASTOS user application so that a communication can be done between the both for services related to their business or order delivery (if they provide) or order pickup (if they provide) GASTOS is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it</string>
    <string name="i_have_read_all_the_terms_and_conditions_and_agree_to_them">I have read all the terms and conditions, and agree to them.</string>
    <string name="i_agree">I Agree</string>
    <string name="guide_to_gastos_provider_app">Guide to Gastos Provider App</string>
    <string name="greivance_policy">Greivance Policy</string>
    <string name="about_gastos_txt">Welcome to GASTOS, your number one solution of your daily payments. We\'re dedicated to providing you with the best of the services, with a focus on dependability. customer service, and your benefits. GASTOS is FinTech Startup Based in Chandigarh aimed to uplift the local and small businesses. Gastos is an Application based startup which helps user to save their money while doing payments at their local shops and businesses also helping them to manage all of their expenses at one place. Gastos has a potential of becoming a Billion Dollar Industry in coming years and has a potential user base of more than 200 Million to target. Gastos is the only startup in India which is bringing UPI Digital cards for the users which helps them to save their money. During this Covid-19 situation time and between the hard races of online delivery, the local and small scaled businesses are mostly affected. Gastos is the startup which is promoting these small businesses to grow and become a brand before the user. Gastos is solving multiple problems for users like fake discounts, lack of saving, unmanaged expenses. We\'re working to turn our passion for the services into a booming Market Network. We hope you enjoy our services as much as we enjoy offering them to you. Sincerely, Sahgal Kumar (Founder) here are some following ways through which you will be connected with us. • Instagram : gastos.in • Facebook : GASTOS DEALZ • Twitter : gastos_in For any queries you can contact us as help@gastos.in</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ultrices orci lacus, eget malesuada orci maximus vitae. Suspendisse sed odio imperdiet, mollis lectus eu, ultrices nibh. Nam nec tincidunt ex, in ultrices purus. Fusce at urna non est molestie ultrices. Nunc elementum tincidunt sagittis. roin feugiat augue vitae nisl posuere sodales eget vitae lacus. Nunc tristique magna leo, quis mollis est porttitor sed.</string>
    <string name="greivance_redressal">Greivance Redressal</string>
    <string name="learn_how_gastos_works">Learn how Gastos works.</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="refer_to_your_firends_and_earn_rewards">Refer to your Friends and Earn Rewards</string>
    <string name="select_content">Select Content</string>
    <string name="select_the_content_template_or_you_can_request_your_own_template">Select the Content Template or you can request your own Template</string>
    <string name="content_txt">#1 \n\n Get 10% Off on Minimum Order of Rs 1000 at Amit Kirana Store Visit at linkkkkkkkkkkkkkkkkkkkkkkkkkk</string>
    <string name="content_txt2">#2 \n\n Get 10% Off on Minimum Order of Rs 1000 at Amit Kirana Store Visit at linkkkkkkkkkkkkkkkkkkkkkkkkkk</string>
    <string name="create_your_own_template">Create your own Template</string>
    <string name="upload_media">Upload Media</string>
    <string name="hi_gastos_provider">Hi Gastos Provider</string>
    <string name="your_full_name">Your Full Name</string>
</resources>