<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/white"
    android:scrollbars="none">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/back"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/plusjakartasansmedium"
        android:gravity="start"
        android:textStyle="bold"
        android:text="@string/user_agreement"
        android:textColor="#212121"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/plusjakartasansregular"
        android:gravity="start"
        android:text="@string/read_the_document_below_and_agree_to_the_terms_to_proceed"
        android:textColor="#909090"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_layout"
        android:padding="5dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/plusjakartasansregular"
            android:textStyle="bold"
            android:gravity="start"
            android:text="@string/terms"
            android:textColor="#909090"
            android:textSize="14sp" />


    </ScrollView>


    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:buttonTint="#10B981"
        android:text="@string/i_have_read_all_the_terms_and_conditions_and_agree_to_them"
        android:textColor="#3D3D3F"
        app:layout_constraintBottom_toTopOf="@+id/add_discount"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/add_discount"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dark_green_curve"
        android:fontFamily="@font/plusjakartasansregular"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/i_agree"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>