<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:paddingEnd="20dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_coolicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/select_content"
        android:textColor="#212121"
        android:fontFamily="@font/plusjakartadisplaymedium"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/plusjakartasansregular"
        android:gravity="start"
        android:text="@string/select_the_content_template_or_you_can_request_your_own_template"
        android:textColor="#909090"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:scrollbars="none"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/add_promotion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout"
        android:fontFamily="@font/plusjakartasansregular"
        android:padding="20dp"
        android:text="@string/content_txt"
        android:textColor="#2D796D"
        android:textSize="14sp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/cons1"
            android:padding="20dp"
            android:textSize="14sp"
            android:fontFamily="@font/plusjakartasansregular"
            android:textColor="#2D796D"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_layout"
            android:text="@string/content_txt2"
            />


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/bg_layout"
        android:orientation="horizontal"
        android:padding="20dp"
        >


        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/plusjakartasansregular"
            android:text="@string/create_your_own_template"
            android:textColor="#545454"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_forward2" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:fontFamily="@font/plusjakartasansbold"
        android:textColor="#2D796D"
        android:text="@string/upload_media"
        />

</LinearLayout>
    </ScrollView>



    <TextView
        android:id="@+id/add_promotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_dark_green_curve"
        android:fontFamily="@font/plusjakartasansregular"
        android:gravity="center"
        android:padding="15dp"
        android:text="Proceed"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>