<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EnterFullNameActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/plusjakartadisplaybold"
        android:text="@string/hi_gastos_provider"
        android:textColor="@color/gastos_Black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/plusjakartadisplaymedium"
        android:text="Enter your information to start using the Gastos Provider App"
        android:textColor="@color/gastos_Grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/name_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edt_text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/your_full_name"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:padding="15dp"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/textMob"
        app:layout_constraintStart_toStartOf="@+id/textMob"
        app:layout_constraintTop_toBottomOf="@+id/textMob"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/email_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edt_text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/email_addre"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textMob"
        app:layout_constraintStart_toStartOf="@+id/textMob"
        app:layout_constraintTop_toBottomOf="@+id/textMob"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/shop_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edt_text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/shop_name"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:padding="15dp"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textMob"
        app:layout_constraintStart_toStartOf="@+id/textMob"
        app:layout_constraintTop_toBottomOf="@+id/textMob"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/nextContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_grey_continue"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/conti"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>